2006-05-16  Peter Dennis Bartok  <pbartok@novell.com> 

	* XplatUIX11.cs:
	  - AddExpose: Don't add expose ranges outside the size of our
	    window
	  - Cast opacity values to Int32 to avoid crashes with certain
	    values
	  - Added disabled code paths that protect against illegal cross-
	    thread painting (Developers.exe)

2006-05-16  Peter Dennis Bartok  <pbartok@novell.com>

	* ProgressBar.cs: Invalidate the control when it's resized
	  since block size is based on control size. (#78388)

2006-05-16  Miguel de Icaza  <miguel@novell.com>

	* DataGrid.cs (SetDataBinding): per the discussion on irc, instead
	of setting the incoming argument to the "reset" value, we set the
	this.datamember to string.empty (before we were invalidating the
	incoming data).   

	Fixes 78420

2006-05-16  Peter Dennis Bartok  <pbartok@novell.com> 

	* Form.cs: Only apply transparency settings after the form
	  is created. (Fixes #77800)

2006-05-16  Peter Dennis Bartok  <pbartok@novell.com>

	* ApplicationContext.cs: Grab the HandleDestroyed event so
	  we know when to fire OnMainFormClosed 

2006-05-16  Peter Dennis Bartok  <pbartok@novell.com> 

	* Application.cs: Introduced sub-class to allow tracking of
	  threads and centralized triggering of the event mess for
	  ThreadExit, AppExit, etc..  (#76156)

2006-05-16  Alexander Olk  <alex.olk@googlemail.com>

	* MimeIcon.cs:
	  - Do not return a null icon index value for a mime subclass.
	    Instead try the main mime type class too.
	  - Seems that some newer distributions don't have a link to some
	    gnome default icons anymore. So check the default gnome dir too.
	  

2006-05-16  Jackson Harper  <jackson@ximian.com>

	* MdiClient.cs: Don't paint the parent background image if we have
	our own background image.

2006-05-16  Peter Dennis Bartok  <pbartok@novell.com> 

	* Control.cs:
	  - PerformLayout: Do not shrink space filled by DockStyle.Fill
	    controls, all filled controls are supposed to overlap (#78080)