@@ -1,3 +1,7 @@
+2006-05-16  Peter Dennis Bartok  <pbartok@novell.com>
+
+	* XplatUIX11.cs (AddExpose): More sanity checks
+
 2006-05-16  Peter Dennis Bartok  <pbartok@novell.com> 
 
 	* XplatUIX11.cs:
